samples/isr-08.ceu
#include "arduino.ceu"

input int PIN02;
#include "pins.ceu"

#include "timer.ceu"
#include "usart.ceu"

input void OS_START;
await OS_START;

emit usart_begin => 9600;

watching 4s do
    loop do
        par/and do
            await 1s;
        with
            emit USART_TX => ((byte&&)"Hello World!\n",13);
            await USART_TX_DONE;
        end
    end
end

watching PIN02 do
    var byte c = 0;
    par do
        every rx in USART_RX do
            c = rx;
        end
    with
        loop do
            await USART_RX;
            loop do
                var byte cc = c;
                emit USART_TX => (&&cc,1);
                c = 0;
                await USART_TX_DONE;
                if c == 0 then
                    break;
                end
            end
        end
    end
end

// should tx up to 1-6
watching 6ms do
    emit USART_TX => ((byte&&)"1234567890",10);
    finalize with
        emit USART_TX_CANCEL;
    end
    await USART_TX_DONE;
end

// error
emit USART_TX => ((byte&&)"Hello World!\n",13);
emit USART_TX => ((byte&&)"Hello World!\n",13);

escape 0;
